--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,39 @@
 @tailwind utilities;
 
 @layer components {
+    .sidebar {
+        @apply fixed top-0 left-0 h-screen w-16 m-0 flex flex-col bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-white;
+    }
+
     .sidebar-icon {
-        @apply relative flex items-center justify-center h-12 w-12 my-2 mx-auto shadow-lg bg-gray-800 text-green-500 hover:bg-green-600 hover:text-white rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer;
+        @apply relative flex items-center justify-center h-12 w-12 my-2 mx-auto bg-gray-200 dark:bg-gray-800 text-green-500 hover:bg-green-600 hover:text-white rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer;
     }
 
     .sidebar-tooltip {
-        @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left;
+        @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-gray-700 bg-gray-200 dark:text-white dark:bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left;
+    }
+
+    .channel-bar {
+        @apply w-80 h-auto flex flex-col bg-gray-200 text-gray-900 py-4 px-8 ml-16 dark:bg-gray-800 dark:text-gray-100;
+    }
+
+    .channel-title {
+        @apply text-lg font-bold;
+    }
+
+    .channel-content {
+        @apply mt-3 font-semibold;
+    }
+
+    .main-content {
+        @apply flex w-screen h-screen bg-gray-300 dark:bg-gray-700;
+    }
+
+    .top-nav {
+        @apply w-full m-4;
+    }
+
+    .theme-icon {
+        @apply cursor-pointer text-gray-500 dark:text-gray-300 hover:text-pink-700 dark:hover:text-pink-600;
     }
 }
