add top nav and icons

--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,11 @@
         @apply w-80 h-auto flex flex-col bg-gray-200 text-gray-900 py-4 px-8 ml-16 dark:bg-gray-800 dark:text-gray-100;
     }
 
-    .channel-title {
+    .channel-bar__title {
         @apply text-lg font-bold;
     }
 
-    .channel-content {
+    .channel-bar__content {
         @apply mt-3 font-semibold;
     }
 
@@ -32,10 +32,41 @@
     }
 
     .top-nav {
-        @apply w-full m-4;
+        @apply w-full h-20 mx-2 flex flex-row items-center justify-evenly  shadow-md;
+    }
+
+    .top-nav__title {
+        @apply font-mono text-gray-900 dark:text-gray-100 text-xl font-bold tracking-wider;
+    }
+
+    .hashtag-icon {
+        @apply dark:text-gray-200 text-gray-900;
     }
 
     .theme-icon {
-        @apply cursor-pointer text-gray-500 dark:text-gray-300 hover:text-pink-700 dark:hover:text-pink-600;
+        @apply cursor-pointer text-gray-500 dark:text-gray-300 hover:text-pink-600 dark:hover:text-pink-500;
+    }
+
+    .search-bar {
+        @apply w-32 min-w-0 md:w-1/5 flex items-center justify-start 
+        bg-gray-300 text-gray-400 dark:bg-gray-600
+         dark:text-gray-400
+         px-2 h-9 ml-0 mr-0 
+         rounded-md shadow-md
+         transition duration-300 ease-in-out;
+    }
+
+    .search-bar__input {
+        @apply w-full font-sans font-semibold
+        bg-transparent outline-none 
+      text-gray-500  placeholder-gray-500 dark:placeholder-gray-400
+        pl-1 rounded;
+    }
+
+    .avatar-icon,
+    .bell-icon {
+        @apply text-gray-600 
+        dark:text-gray-400 hover:text-pink-600 dark:hover:text-pink-500 cursor-pointer  mr-3 ml-4
+    transition duration-300 ease-in-out;
     }
 }
